[package]
name = "net-syringe"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/eliasmoflag/net-syringe"
license = "MIT"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
thiserror = "2.0.16"
windows = { version = "0.61.3", features = ["Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
simplelog = "0.12.2"
log = "0.4.27"
