[package]
name = "service"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/eliasmoflag/net-syringe"
license = "MIT"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
pelite = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
